--- a/CoinMaster/config.json
+++ b/CoinMaster/config.json
@@ -3,6 +3,7 @@
   "data": {
     "androidLink": "market://details?id=net.itify.coinmaster",
     "iosLink": "itms-apps://apps.apple.com/app/id${IOS_APP_ID}?action=write-review",
-    "privacyLink": "http://coinmaster.itify.net/privacy"
+    "privacyLink": "https://masterspin.itify.net/policy.html",
+    "termLink": "https://masterspin.itify.net/term-of-service.html",
   }
 }
