--- a/CoinMaster/config.json
+++ b/CoinMaster/config.json
@@ -4,6 +4,6 @@
     "androidLink": "market://details?id=net.itify.coinmaster",
     "iosLink": "itms-apps://apps.apple.com/app/id${IOS_APP_ID}?action=write-review",
     "privacyLink": "https://masterspin.itify.net/policy.html",
-    "termLink": "https://masterspin.itify.net/term-of-service.html",
+    "termLink": "https://masterspin.itify.net/term-of-service.html"
   }
 }
