--- a/CoinMaster/config.json
+++ b/CoinMaster/config.json
@@ -3,7 +3,7 @@
   "data": {
     "androidLink": "market://details?id=net.itify.coinmaster",
     "iosLink": "itms-apps://apps.apple.com/app/id1663585274",
-    "privacyLink": "https://masterspin.itify.net/policy.html",
-    "termLink": "https://masterspin.itify.net/term-of-service.html"
+    "privacyLink": "http://coinmaster.itify.net/policy.html",
+    "termLink": "http://coinmaster.itify.net/term-of-service.html"
   }
 }
