--- a/Robux/config.json
+++ b/Robux/config.json
@@ -2,7 +2,7 @@
   "status": "ok",
   "data": {
     "androidLink": "market://details?id=net.itify.robux",
-    "iosLink": "itms-apps://apps.apple.com/app/id6445822693",
+    "iosLink": "itms-apps://apps.apple.com/app/idxxxxxxx",
     "privacyLink": "http://coinmaster.itify.net/policy.html",
     "termLink": "http://coinmaster.itify.net/term-of-service.html"
   }
